0.9.1/_sources/cpp_api/runtime/index.rst.txt
Runtime Module
==============

API documentation for the runtime module.

.. toctree::
   :maxdepth: 1

   audioLoader
   audioUtils
   decoderRegistry
   decoderUtils
   decodingInferenceContext
   decodingStrategy
   deepstackBinding
   deploymentConfig
   dflashDecodeUtils
   dflashDecoder
   eagleDecoder
   embeddingPreprocessor
   engineExecutor
   externalWeightManager
   gemma4EmbeddingPreprocessor
   gemma4MTPDecoder
   hybridCacheManager
   imageUtils
   inferenceDims
   inferencePhase
   kvCacheManager
   layerDebugger
   llmEngineConfig
   llmInferenceRuntime
   llmRuntimeUtils
   logitBias
   loraManager
   mambaCacheManager
   melSpectrogram
   mtpDecoder
   pipelineIO
   qwen3OmniTTSRuntime
   registryBuilder
   ropeCache
   sharedResources
   stepPreparer
   streaming
   systemPromptKVCache
   tensorMap
   tensorRegistry
   vanillaDecoder
