0.10.0/_sources/cpp_api/runtime/index.rst.txt
Runtime Module
==============

API documentation for the runtime module.

.. toctree::
   :maxdepth: 1

   audioLoader
   audioUtils
   blockDiffusionDecoder
   blockHash
   blockIndex
   cacheRecord
   checkpointReader
   checkpointWeightAssemble
   collectiveGroup
   contextCacheConfig
   contextCacheCoordinator
   contextCacheDeployment
   contextCacheManager
   contextCacheMetrics
   contextCacheRequest
   contextCacheTypes
   decoderRegistry
   decoderUtils
   decodingInferenceContext
   decodingStrategy
   deepstackBinding
   deploymentConfig
   dflashDecodeUtils
   dflashDecoder
   dsparkDecoder
   eagleDecoder
   embeddingPreprocessor
   engineExecutor
   evictionPlanner
   externalWeightManager
   gemma4EmbeddingPreprocessor
   gemma4MTPDecoder
   hybridCacheManager
   hybridSnapshotStorage
   imageUtils
   inferenceDims
   inferencePhase
   kvCacheManager
   kvPageTable
   layerDebugger
   llmEngineConfig
   llmInferenceRuntime
   llmRuntimeUtils
   logitBias
   loraManager
   mambaCacheManager
   melSpectrogram
   mtpDecoder
   multiDevicePluginCommRegistry
   multiDevicePluginResourceFactory
   multiDevicePluginResources
   ncclCollectiveBackend
   parallelConfig
   pipelineIO
   qwen3OmniTTSRuntime
   registryBuilder
   resourcePools
   reusePlan
   ropeCache
   sharedResources
   stepPreparer
   streaming
   systemPromptKVCache
   tensorMap
   tensorParallelNcclResources
   tensorParallelPluginResources
   tensorRegistry
   vanillaDecoder
